--- a/src/main/resources/com/example/bookapp/accueil.fxml
+++ b/src/main/resources/com/example/bookapp/accueil.fxml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="$CONTROLLER_NAME$"
-            prefHeight="400.0" prefWidth="600.0" >
-
+<AnchorPane id="AnchorPane" prefHeight="480.0" prefWidth="640.0" xmlns:fx="http://javafx.com/fxml" fx:controller="com.example.bookapp.AccueilController">
+<children>
+   <VBox fx:id="VBoxMain" alignment="TOP_CENTER" prefHeight="423.0" prefWidth="341.0" AnchorPane.bottomAnchor="40.0" AnchorPane.leftAnchor="100.0" AnchorPane.rightAnchor="100.0" AnchorPane.topAnchor="20.0">
+      <children>
+         <Label layoutX="222.0" layoutY="66.0" text="Bienvenue cher utilisateur." >
+            <font>
+               <Font name="System Bold" size="18.0" />
+            </font>
+         </Label>
+         <ListView fx:id="listBoxMain" prefHeight="200.0" prefWidth="200.0" />
+         <Label id="TextLbl" fx:id="LblAddText" text="Enter Text" />
+         <TextField fx:id="txtAddItem" prefWidth="200.0" />
+         <HBox id="HBox" fx:id="HBox4Btns" alignment="CENTER" spacing="5.0">
+            <children>
+               <Button fx:id="BtnAdd" mnemonicParsing="false" onAction="#addAction" text="Add" />
+               <Button fx:id="BtnDelete" mnemonicParsing="false" onAction="#deleteAction" text="Delete" />
+            </children>
+         </HBox>
+      </children>
+   </VBox>
+</children>
 </AnchorPane>
